# fq_arithmetic

./: .gitignore  CMakeLists.txt  README.md  gen.py  shell.nix  shell_neon.nix
.github/workflows/: arm.yml  osx-x86.yml  test.yml
cuda/: .gitignore  README.md  test_gen.py
cuda/.github/workflows/: test.yml
cuda/bench/: clock.cu
cuda/src/: arith.cuh  karatsuba.cu  karatsuba64.cu
cuda/test/limb2/: test.cu  test_vecs.cuh
cuda/test/limb3/: test_vecs.cuh
cuda/test/limb4/: test.cu
cuda/test/limb5/: test.cu
cuda/test/limb6/: test.cu
cuda/test/limb7/: test.cu
cuda/test/limb8/: test.cu
src/: .gitignore  CMakeLists.txt  gen2to12_table.c  helper.h
src/127/: README.md  arith.c  arith.h  bench.cpp  lookup.py  matrix.h
src/16/: arith.c  arith.ec  arith.h  arith.j  arith.jazz  bench.cpp  bitslice.h  echelon_form_loop.h  echelon_form_loop_compressed.h  matrix.h  vector.h
src/16to3/: arith.c  arith.h  bench.cpp  matrix.h  vector.h
src/192/: arith.h
src/2/: arith.c  arith.h  bench.cpp  matrix.h  table_precompute.c  vector.h
src/251/: arith.c  arith.h
src/256/: arith.c  arith.h  arith.jazz  bench.cpp  bitslice.h  matrix.h  vector.h
src/256to16/: arith.h
src/256to2/: arith.c  arith.h  bench.cpp  bitslice.h
src/256to24/: arith.h
src/256to32/: arith.c  arith.h
src/256to4/: arith.h
src/256to8/: arith.h
src/256toX/: arith.h
src/2to11/: arith.c  arith.h  bench.cpp  matrix.h  vector.h
src/2to12/: arith.c  arith.h  bench.cpp  bitslice.h  gen.py  matrix.h  vector.h
src/2to128/: arith.c  arith.h  bench.cpp  vector.h
src/2to192/: arith.c  arith.h  bench.cpp  matrix.h  vector.h
src/2to256/: arith.c  arith.h  arith_neon.h  bench.cpp  matrix.h  vector.h
src/2to32/: arith.c  arith.h  bench.cpp  vector.h
src/2to64/: arith.c  arith.h  matrix.h  vector.h
src/31/: arith.c  arith.h  bench.cpp
src/4/: arith.c  arith.h  bench.cpp
src/cuda/: shell.nix
src/cuda/bench/: clock.cu
src/cuda/test/limb3/: test.cu
src/cuda/test/limb4/: test_vecs.cuh
src/cuda/test/limb5/: test_vecs.cuh
src/cuda/test/limb6/: test_vecs.cuh
src/cuda/test/limb7/: test_vecs.cuh
src/cuda/test/limb8/: test_vecs.cuh
