SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
	set(filename "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/arith.c")
    add_executable(arith_${subdir} ${filename})
	add_test(arith_${subdir} arith_${subdir})
	if (benchmark_FOUND)
		set(filename "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/bench.cpp")
		add_executable(bench_${subdir} ${filename})
		target_link_libraries(bench_${subdir} benchmark::benchmark)
		add_test(bench_${subdir} bench_${subdir})
	endif()
ENDFOREACH()
